# xmas

./: .gitignore  .ocamlinit  dune-project  input1.xmas  syntax.xmas  xmas.opam
lib/: ast.ml  driver.ml  dune  lexer.mll  parser.messages  parser.mly  parser2.conflicts  parser2.mly
lib/ast/: ast.ml  astWithPos.ml  position.ml
lib/interpreter/: interpreter.ml
lib/parser/: ast.ml  basic.ml  parser.ml
lib/parsing/: driver.ml  dune  lexer.mll  parser.messages  parser.mly
test/: basicParsers.ml  dune  fixtures.ml  gen.ml  lexer_test.ml  parserCombinators.ml  parser_test.ml
