(include_subdirs unqualified)

(library
 (name xmas)
 (libraries ppx_show.runtime menhirLib)
 (preprocess
  (pps ppx_show))
 (flags
  (:standard -warn-error -A)))

(menhir
 (modules parser)
 (flags :standard))

(ocamllex lexer)

;; For the incremental API parser

(rule
 (action
  (with-stdout-to
   errorParser.mly
   (run menhir %{dep:parser.mly} --only-preprocess-u))))

(menhir
 (modules errorParser)
 (flags :standard --table --external-tokens Parser))

; The target for saving menhir's stdout to bnf_parser_messages.ml

(rule
 (targets parser.messages)
 (deps parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --list-errors %{deps}))))

(rule
 (targets parserMessages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))
